...
"jump_page_view.button.confirm" = "Confirm";

// MARK: AlertView
"loading_view.title.loading" = "Loading...";
"loading_view.title.preparing_database" = "Preparing the database...";
"not_login_view.title.need_login" = "You need to login to access this feature.";
"not_login_view.button.login" = "Login";
"error_view.button.retry" = "Retry";
"error_view.button.drop_database" = "Drop the database";
"error_view.title.try_later" = "Please try again later.";
"error_view.title.network" = "A network error occurred.";
"error_view.title.parsing" = "A parsing error occurred.";
"error_view.title.unknown" = "An unknown error occurred.";
...
// MARK: HomeView
"home_view.title.home" = "Home";
"home_view.section.title.frontpage" = "Frontpage";
"home_view.section.title.toplists" = "Toplists";
"home_view.section.title.other" = "Other";
// HomeMiscGridType
"enum.home_misc_grid_type.title.popular" = "Popular";
"enum.home_misc_grid_type.title.watched" = "Watched";
"enum.home_misc_grid_type.title.history" = "History";

// MARK: FrontpageView
"frontpage_view.title.frontpage" = "Frontpage";

// MARK: ToplistsView
"toplists_view.title.toplists" = "Toplists";
...
