...
            "value" : "Mehr"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "More"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "その他"
...
            "value" : "Alle anzeigen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Show All"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "すべて表示"
...
