...
    "reading_setting": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Reading Setting"
          }
        },
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Leseeinstellungen"
...
