...
    "metadata.gallery_infos": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Gallery Infos"
          }
        },
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Galerie-Infos"
...
